--- a/transferdetails/Ayil_Bank_(сом_+_обмен)643417840To_Card.html
+++ b/transferdetails/Ayil_Bank_(сом_+_обмен)643417840To_Card.html
@@ -132,7 +132,7 @@
   background: var(--surface-hover);
 }
   </style>
-<meta content="article" property="og:type"/><meta content="Получение долларов в Айыл банк" property="og:title"/><meta content="Перевод сомов в Айыл банк и последующий обмен на доллары" property="og:description"/><meta content="summary" name="twitter:card"/></head>
+<meta content="article" property="og:type"/><meta content="Получение долларов в Айыл банк" property="og:title"/><meta content="Перевод сомов в Айыл банк через приложение банка и последующий обмен на доллары" property="og:description"/><meta content="summary" name="twitter:card"/></head>
 <body>
 <article><div class="content">
 <h2>Получение долларов в Айыл банк</h2>
@@ -141,7 +141,7 @@
 
 
 
-<div class="text">Перевод сомов в Айыл банк и последующий обмен на доллары</div>
+<div class="text">Перевод сомов в Айыл банк через приложение банка и последующий обмен на доллары</div>
 
 <div class="links-row">
 <a href="https://t.me/CursoUz" rel="noopener" target="_blank">Телеграм-канал Curso</a>
