--- a/transferdetails/Best(с)+Bakai_Bank(обмен)643417840To_Card.html
+++ b/transferdetails/Best(с)+Bakai_Bank(обмен)643417840To_Card.html
@@ -132,7 +132,7 @@
   background: var(--surface-hover);
 }
   </style>
-<meta content="article" property="og:type"/><meta content="Получение долларов в Bakai Bank" property="og:title"/><meta content="Перевод с лучшим курсом сомов в Бакай банк и последующий обмен на Доллары" property="og:description"/><meta content="summary" name="twitter:card"/></head>
+<meta content="article" property="og:type"/><meta content="Получение долларов в Bakai Bank" property="og:title"/><meta content="Перевод с лучшим достуаным курсом сомов в Бакай банк и последующий обмен на Доллары США" property="og:description"/><meta content="summary" name="twitter:card"/></head>
 <body>
 <article><div class="content">
 <h2>Получение долларов в Bakai Bank</h2>
@@ -141,7 +141,7 @@
 
 
 
-<div class="text">Перевод с лучшим курсом сомов в Бакай банк и последующий обмен на Доллары</div>
+<div class="text">Перевод с лучшим достуаным курсом сомов в Бакай банк и последующий обмен на Доллары США</div>
 
 <div class="links-row">
 <a href="https://t.me/CursoUz" rel="noopener" target="_blank">Телеграм-канал Curso</a>
