--- a/transferdetails/CombinedRuUsdEurVisa643978ToCard.html
+++ b/transferdetails/CombinedRuUsdEurVisa643978ToCard.html
@@ -132,7 +132,7 @@
   background: var(--surface-hover);
 }
   </style>
-<meta content="article" property="og:type"/><meta content="Курс Евро в Капитал Банке" property="og:title"/><meta content="При пополнении долларовой визы через Unired и оплате, с ковертацией по курсу платёжной системы Visa" property="og:description"/><meta content="summary" name="twitter:card"/></head>
+<meta content="article" property="og:type"/><meta content="Курс Евро в Капитал Банке" property="og:title"/><meta content="При пополнении долларовой визы через Unired и оплате картой Visa, с ковертацией по курсу платёжной системы Visa" property="og:description"/><meta content="summary" name="twitter:card"/></head>
 <body>
 <article><div class="content">
 <h2>Курс Евро в Капитал Банке</h2>
@@ -141,7 +141,7 @@
 
 
 
-<div class="text">При пополнении долларовой визы через Unired и оплате, с ковертацией по курсу платёжной системы Visa</div>
+<div class="text">При пополнении долларовой визы через Unired и оплате картой Visa, с ковертацией по курсу платёжной системы Visa</div>
 
 <div class="links-row">
 <a href="https://t.me/CursoUz" rel="noopener" target="_blank">Телеграм-канал Curso</a>
