--- a/transferdetails/Kapital(конверсия)+Avosend840643To_card.html
+++ b/transferdetails/Kapital(конверсия)+Avosend840643To_card.html
@@ -132,7 +132,7 @@
   background: var(--surface-hover);
 }
   </style>
-<meta content="article" property="og:type"/><meta content="Курс перевода долларов из Капитал банка" property="og:title"/><meta content="4999 сум со стороны Avosend • Для получения курса необходимо обменять доллары на сумы в Капитал банке (конверсия), перевести сумы на UzCard/Humo. Зател сделать перевод на российскую карту в приложении" property="og:description"/><meta content="summary" name="twitter:card"/></head>
+<meta content="article" property="og:type"/><meta content="Курс перевода долларов из Капитал банка" property="og:title"/><meta content="4999 сум со стороны Avosend • Для получения курса необходимо: 1. обменять доллары на сумы в Капитал банке (конверсия) 2. перевести сумы на UzCard/Humo 3. Сделать перевод на российскую карту в приложен" property="og:description"/><meta content="summary" name="twitter:card"/></head>
 <body>
 <article><div class="content">
 <h2>Курс перевода долларов из Капитал банка</h2>
@@ -141,7 +141,7 @@
 
 <h2>Комиссии</h2>
 <div class="text">4999 сум со стороны Avosend</div>
-<div class="text">Для получения курса необходимо обменять доллары на сумы в Капитал банке (конверсия), перевести сумы на UzCard/Humo. Зател сделать перевод на российскую карту в приложении Avosend</div>
+<div class="text"><span>Для получения курса необходимо:<br/>1. обменять доллары на сумы в Капитал банке (конверсия) <br/>2. перевести сумы на UzCard/Humo<br/>3. Сделать перевод на российскую карту в приложении Avosend</span></div>
 
 <div class="links-row">
 <a href="https://t.me/CursoUz" rel="noopener" target="_blank">Телеграм-канал Curso</a>
