--- a/transferdetails/Octobank(конверсия-_сум)840643ToCard.html
+++ b/transferdetails/Octobank(конверсия-_сум)840643ToCard.html
@@ -132,7 +132,7 @@
   background: var(--surface-hover);
 }
   </style>
-<meta content="article" property="og:type"/><meta content="Перевод долларов из Октобанк" property="og:title"/><meta content="Курс показан для перевода долларов, через конвертацию в сумы, в Россию" property="og:description"/><meta content="summary" name="twitter:card"/></head>
+<meta content="article" property="og:type"/><meta content="Перевод долларов из Октобанк" property="og:title"/><meta content="Курс показан для перевода долларов, через конвертацию в сумы, в Россию: 1. Обмен долларов на сумы 2. Перевод сумов на российскую карту" property="og:description"/><meta content="summary" name="twitter:card"/></head>
 <body>
 <article><div class="content">
 <h2>Перевод долларов из Октобанк</h2>
@@ -141,7 +141,7 @@
 
 
 
-<div class="text">Курс показан для перевода долларов, через конвертацию в сумы, в Россию</div>
+<div class="text"><span>Курс показан для перевода долларов, через конвертацию в сумы, в Россию:<br/>1. Обмен долларов на сумы<br/>2. Перевод сумов на российскую карту</span></div>
 <div aria-label="Ссылки на магазины и сайт" class="icons-row" role="list"><a aria-label="App Store" class="icon-link" href="https://apps.apple.com/ru/app/octo-mobile/id1460141475" rel="noopener" role="listitem" target="_blank"><img alt="" src="store icons/App_Store.svg"/></a><a aria-label="Google Play" class="icon-link" href="https://play.google.com/store/apps/details?id=com.ravnaqbank.rbkmobile&amp;hl=ru" rel="noopener" role="listitem" target="_blank"><img alt="" src="store icons/Google_Play.png"/></a></div>
 <div class="links-row">
 <a href="https://t.me/CursoUz" rel="noopener" target="_blank">Телеграм-канал Curso</a>
