--- a/transferdetails/Unired_(старый_акк.)643860To_card.html
+++ b/transferdetails/Unired_(старый_акк.)643860To_card.html
@@ -132,16 +132,16 @@
   background: var(--surface-hover);
 }
   </style>
-<meta content="article" property="og:type"/><meta content="Переводы Unired" property="og:title"/><meta content='Официальные лимиты на сайте не соотвествуют фактическим. В качествен ориентира рекомендуем использовать На один перевод $1000 В день 300 000₽, включая "отмененные" переводы • Без комиссии • Для перево' property="og:description"/><meta content="https://unired.uz/" property="og:url"/><link href="https://unired.uz/" rel="canonical"/><meta content="summary" name="twitter:card"/></head>
+<meta content="article" property="og:type"/><meta content="Переводы Unired" property="og:title"/><meta content='Официальные лимиты на сайте не соотвествуют фактическим. В качестве ориентира рекомендуем использовать На один перевод $1000 В день 300 000₽, включая "отмененные" переводы • Без комиссии • Для перевод' property="og:description"/><meta content="https://unired.uz/" property="og:url"/><link href="https://unired.uz/" rel="canonical"/><meta content="summary" name="twitter:card"/></head>
 <body>
 <article><div class="content">
 <h2>Переводы Unired</h2>
 
 <h2>Лимиты</h2>
-<div class="text"><span>Официальные лимиты на сайте не соотвествуют фактическим. В качествен ориентира рекомендуем использовать<br/> На один перевод $1000<br/>В день 300 000₽, включая "отмененные" переводы</span></div>
+<div class="text"><span>Официальные лимиты на сайте не соотвествуют фактическим. В качестве ориентира рекомендуем использовать<br/> На один перевод $1000<br/>В день 300 000₽, включая "отмененные" переводы</span></div>
 <h2>Комиссии</h2>
 <div class="text">Без комиссии</div>
-<div class="text">Для переводов может потребоваться ПИНФЛ</div>
+<div class="text"><span>Для переводов может потребоваться ПИНФЛ. <br/>Курс после совершения 5 переводов.</span></div>
 <div aria-label="Ссылки на магазины и сайт" class="icons-row" role="list"><a aria-label="Официальный сайт" class="icon-link" href="https://unired.uz/" rel="noopener" role="listitem" target="_blank"><img alt="" src="store icons/website.svg"/></a><a aria-label="App Store" class="icon-link" href="https://apps.apple.com/uz/app/unired-money-transfers/id1547412944" rel="noopener" role="listitem" target="_blank"><img alt="" src="store icons/App_Store.svg"/></a><a aria-label="Google Play" class="icon-link" href="https://play.google.com/store/apps/details?id=itunisoftgroup.uz" rel="noopener" role="listitem" target="_blank"><img alt="" src="store icons/Google_Play.png"/></a></div>
 <div class="links-row">
 <a href="https://t.me/CursoUz" rel="noopener" target="_blank">Телеграм-канал Curso</a>
