--- a/transferdetails/VisaUzumUnired643978.html
+++ b/transferdetails/VisaUzumUnired643978.html
@@ -132,7 +132,7 @@
   background: var(--surface-hover);
 }
   </style>
-<meta content="article" property="og:type"/><meta content="Курс евро Uzum Card" property="og:title"/><meta content="Курс евро при оплате сумовой Visa Uzum Card" property="og:description"/><meta content="summary" name="twitter:card"/></head>
+<meta content="article" property="og:type"/><meta content="Курс евро Uzum Card" property="og:title"/><meta content="Курс доллара при: 1. Пополнении Visa Uzum Card через юниред 2. Оплате картой покупок в евро" property="og:description"/><meta content="summary" name="twitter:card"/></head>
 <body>
 <article><div class="content">
 <h2>Курс евро Uzum Card</h2>
@@ -141,7 +141,7 @@
 
 
 
-<div class="text">Курс евро при оплате сумовой Visa Uzum Card</div>
+<div class="text"><span>Курс доллара при:<br/>1. Пополнении Visa Uzum Card через юниред<br/>2. Оплате картой покупок в евро</span></div>
 
 <div class="links-row">
 <a href="https://t.me/CursoUz" rel="noopener" target="_blank">Телеграм-канал Curso</a>
