--- a/transferdetails/CombinedRuUzUsdKapital643840ToCard.html
+++ b/transferdetails/CombinedRuUzUsdKapital643840ToCard.html
@@ -132,7 +132,7 @@
   background: var(--surface-hover);
 }
   </style>
-<meta content="article" property="og:type"/><meta content="Курс доллара в Капитал банке" property="og:title"/><meta content="При переводе сумов самым выгодным способом и конвертацией в доллары по курсу банка" property="og:description"/><meta content="summary" name="twitter:card"/></head>
+<meta content="article" property="og:type"/><meta content="Курс доллара в Капитал банке" property="og:title"/><meta content="При переводе сумов самым выгодным способом и конвертацией в доллары по курсу Капитал банка" property="og:description"/><meta content="summary" name="twitter:card"/></head>
 <body>
 <article><div class="content">
 <h2>Курс доллара в Капитал банке</h2>
@@ -141,7 +141,7 @@
 
 
 
-<div class="text">При переводе сумов самым выгодным способом и конвертацией в доллары по курсу банка</div>
+<div class="text">При переводе сумов самым выгодным способом и конвертацией в доллары по курсу Капитал банка</div>
 
 <div class="links-row">
 <a href="https://t.me/CursoUz" rel="noopener" target="_blank">Телеграм-канал Curso</a>
