--- a/transferdetails/Unired643398840To_card.html
+++ b/transferdetails/Unired643398840To_card.html
@@ -132,13 +132,13 @@
   background: var(--surface-hover);
 }
   </style>
-<meta content="article" property="og:type"/><meta content="Переводы Unired" property="og:title"/><meta content='Официальные лимиты на сайте не соотвествуют фактическим. В качествен ориентира рекомендуем использовать На один перевод $1000 В день 300 000₽, включая "отмененные" переводы • Без комиссии • Для перево' property="og:description"/><meta content="https://unired.uz/" property="og:url"/><link href="https://unired.uz/" rel="canonical"/><meta content="summary" name="twitter:card"/></head>
+<meta content="article" property="og:type"/><meta content="Переводы Unired" property="og:title"/><meta content='Официальные лимиты на сайте не соотвествуют фактическим. В качестве ориентира рекомендуем использовать На один перевод $1000 В день 300 000₽, включая "отмененные" переводы • Без комиссии • Для перевод' property="og:description"/><meta content="https://unired.uz/" property="og:url"/><link href="https://unired.uz/" rel="canonical"/><meta content="summary" name="twitter:card"/></head>
 <body>
 <article><div class="content">
 <h2>Переводы Unired</h2>
 
 <h2>Лимиты</h2>
-<div class="text"><span>Официальные лимиты на сайте не соотвествуют фактическим. В качествен ориентира рекомендуем использовать<br/> На один перевод $1000<br/>В день 300 000₽, включая "отмененные" переводы</span></div>
+<div class="text"><span>Официальные лимиты на сайте не соотвествуют фактическим. В качестве ориентира рекомендуем использовать<br/> На один перевод $1000<br/>В день 300 000₽, включая "отмененные" переводы</span></div>
 <h2>Комиссии</h2>
 <div class="text">Без комиссии</div>
 <div class="text">Для переводов может потребоваться ПИНФЛ</div>
