--- a/transferdetails/Yoomoney840643To_card.html
+++ b/transferdetails/Yoomoney840643To_card.html
@@ -132,7 +132,7 @@
   background: var(--surface-hover);
 }
   </style>
-<meta content="article" property="og:type"/><meta content="Пополнения кошелька Юмани" property="og:title"/><meta content="Курс пополнения кошелька Юмани в разделе с иностранных карт. Пополнение доступно только с карт Виза" property="og:description"/><meta content="summary" name="twitter:card"/></head>
+<meta content="article" property="og:type"/><meta content="Пополнения кошелька Юмани" property="og:title"/><meta content="Курс пополнения кошелька Юмани в разделе с иностранных карт. Пополнение доступно только с карт Visa" property="og:description"/><meta content="summary" name="twitter:card"/></head>
 <body>
 <article><div class="content">
 <h2>Пополнения кошелька Юмани</h2>
@@ -141,7 +141,7 @@
 
 
 
-<div class="text">Курс пополнения кошелька Юмани в разделе с иностранных карт. Пополнение доступно только с карт Виза</div>
+<div class="text">Курс пополнения кошелька Юмани в разделе с иностранных карт. Пополнение доступно только с карт Visa</div>
 <div aria-label="Ссылки на магазины и сайт" class="icons-row" role="list"><a aria-label="App Store" class="icon-link" href="https://promo.yoomoney.ru/app#!/tab/530611410-2" rel="noopener" role="listitem" target="_blank"><img alt="" src="store icons/App_Store.svg"/></a><a aria-label="Google Play" class="icon-link" href="https://apps.rustore.ru/app/ru.yoo.money" rel="noopener" role="listitem" target="_blank"><img alt="" src="store icons/Google_Play.png"/></a></div>
 <div class="links-row">
 <a href="https://t.me/CursoUz" rel="noopener" target="_blank">Телеграм-канал Curso</a>
