--- a/transferdetails/TezPay643860To_card.html
+++ b/transferdetails/TezPay643860To_card.html
@@ -143,10 +143,24 @@
 <div class="text">Комиссия 1.4%</div>
 <div class="text">для перевода требуется ПИНФЛ</div>
 <div aria-label="Ссылки на магазины и сайт" class="icons-row" role="list"><a aria-label="Официальный сайт" class="icon-link" href="https://tezpay.pro/" rel="noopener" role="listitem" target="_blank"><img alt="" src="store icons/website.svg"/></a><a aria-label="App Store" class="icon-link" href="https://apps.apple.com/uz/app/tezpay-%D0%B4%D0%B5%D0%BD%D0%B5%D0%B6%D0%BD%D1%8B%D0%B5-%D0%BF%D0%B5%D1%80%D0%B5%D0%B2%D0%BE%D0%B4%D1%8B/id1603382872" rel="noopener" role="listitem" target="_blank"><img alt="" src="store icons/App_Store.svg"/></a><a aria-label="Google Play" class="icon-link" href="https://play.google.com/store/apps/details?id=pro.tezpay.app" rel="noopener" role="listitem" target="_blank"><img alt="" src="store icons/Google_Play.png"/></a><a aria-label="RuStore" class="icon-link" href="https://www.rustore.ru/catalog/app/pro.tezpay.app" rel="noopener" role="listitem" target="_blank"><img alt="" src="store icons/rustore.png"/></a></div>
-<div class="links-row">
-<a href="https://t.me/CursoUz" rel="noopener" target="_blank">Телеграм-канал Curso</a>
-<a href="https://t.me/CursoExchangeRatesBot" rel="noopener" target="_blank">Телеграм-бот</a>
-</div>
+
 </div></article>
+
+
+<article><div class="content">
+    <h2>Переводы MilliyPay</h2>
+
+    <h2>Лимиты</h2>
+    <div class="text"><span>5 переводов в день<br/><br/>1 000 000 ₽ в месяц<br/>10 переводов в месяц</span></div>
+    <h2>Комиссии</h2>
+    <div class="text">1.40%</div>
+    <div class="text">Курс указан при переводе на Humo / Uzcard</div>
+    <div aria-label="Ссылки на магазины и сайт" class="icons-row" role="list"><a aria-label="Официальный сайт" class="icon-link" href="https://milliypay.uz/" rel="noopener" role="listitem" target="_blank"><img alt="" src="store icons/website.svg"/></a><a aria-label="App Store" class="icon-link" href="https://apps.apple.com/us/app/milliypay-%D0%B4%D0%B5%D0%BD%D0%B5%D0%B6%D0%BD%D1%8B%D0%B5-%D0%BF%D0%B5%D1%80%D0%B5%D0%B2%D0%BE%D0%B4%D1%8B/id6499466622" rel="noopener" role="listitem" target="_blank"><img alt="" src="store icons/App_Store.svg"/></a><a aria-label="Google Play" class="icon-link" href="https://play.google.com/store/apps/details?id=uz.milliypay.android" rel="noopener" role="listitem" target="_blank"><img alt="" src="store icons/Google_Play.png"/></a><a aria-label="RuStore" class="icon-link" href="https://www.rustore.ru/catalog/app/uz.milliypay.android" rel="noopener" role="listitem" target="_blank"><img alt="" src="store icons/rustore.png"/></a></div>
+    <div class="links-row">
+        <a href="https://t.me/CursoUz" rel="noopener" target="_blank">Телеграм-канал Curso</a>
+        <a href="https://t.me/CursoExchangeRatesBot" rel="noopener" target="_blank">Телеграм-бот</a>
+    </div>
+</div></article>
+
 </body>
 </html>
