--- a/transferdetails/TezPay643860To_card.html
+++ b/transferdetails/TezPay643860To_card.html
@@ -135,6 +135,7 @@
 <meta content="article" property="og:type"/><meta content="Переводы TezPay" property="og:title"/><meta content="На один перевод - 100 000₽ 10 переводов в день В месяц 1 000 000₽ • Комиссия 1.4% • для перевода требуется ПИНФЛ" property="og:description"/><meta content="https://tezpay.pro/" property="og:url"/><link href="https://tezpay.pro/" rel="canonical"/><meta content="summary" name="twitter:card"/></head>
 <body>
 <article><div class="content">
+    <div class="text">Ниже приведен список сервисов, которые используют Universal Bank в качестве платёжной инфраструктуры</div>
 <h2>Переводы TezPay</h2>
 <div class="copy-text" onclick="navigator.clipboard.writeText(this.textContent)">HKLI43KQH</div>
 <h2>Лимиты</h2>
@@ -146,7 +147,7 @@
 
 </div></article>
 
-
+<hr>
 <article><div class="content">
     <h2>Переводы MilliyPay</h2>
 
@@ -156,6 +157,43 @@
     <div class="text">1.40%</div>
     <div class="text">Курс указан при переводе на Humo / Uzcard</div>
     <div aria-label="Ссылки на магазины и сайт" class="icons-row" role="list"><a aria-label="Официальный сайт" class="icon-link" href="https://milliypay.uz/" rel="noopener" role="listitem" target="_blank"><img alt="" src="store icons/website.svg"/></a><a aria-label="App Store" class="icon-link" href="https://apps.apple.com/us/app/milliypay-%D0%B4%D0%B5%D0%BD%D0%B5%D0%B6%D0%BD%D1%8B%D0%B5-%D0%BF%D0%B5%D1%80%D0%B5%D0%B2%D0%BE%D0%B4%D1%8B/id6499466622" rel="noopener" role="listitem" target="_blank"><img alt="" src="store icons/App_Store.svg"/></a><a aria-label="Google Play" class="icon-link" href="https://play.google.com/store/apps/details?id=uz.milliypay.android" rel="noopener" role="listitem" target="_blank"><img alt="" src="store icons/Google_Play.png"/></a><a aria-label="RuStore" class="icon-link" href="https://www.rustore.ru/catalog/app/uz.milliypay.android" rel="noopener" role="listitem" target="_blank"><img alt="" src="store icons/rustore.png"/></a></div>
+    <div class="links-row">
+        <a href="https://t.me/CursoUz" rel="noopener" target="_blank">Телеграм-канал Curso</a>
+        <a href="https://t.me/CursoExchangeRatesBot" rel="noopener" target="_blank">Телеграм-бот</a>
+    </div>
+</div></article>
+<hr>
+<article><div class="content">
+    <h2>Переводы Paygram</h2>
+
+    <h2>Лимиты</h2>
+    <div class="text"><span>Не более 3 переводов одному получателю в сутки<br/>Не более 3 получателей в сутки<br/>От 300₽ до 100 000₽ за транзакцию<br/>В месяц до 100 000₽</span></div>
+    <h2>Комиссии</h2>
+    <div class="text">1.2% при сумме перевода более 4333₽</div>
+
+    <div aria-label="Ссылки на магазины и сайт" class="icons-row" role="list"><a aria-label="Официальный сайт" class="icon-link" href="https://globiz.io/" rel="noopener" role="listitem" target="_blank"><img alt="" src="store icons/website.svg"/></a><a aria-label="App Store" class="icon-link" href="https://apps.apple.com/us/app/paygram/id1324652327" rel="noopener" role="listitem" target="_blank"><img alt="" src="store icons/App_Store.svg"/></a><a aria-label="Google Play" class="icon-link" href="https://play.google.com/store/apps/details?id=io.paygram.mobile&amp;hl=ru" rel="noopener" role="listitem" target="_blank"><img alt="" src="store icons/Google_Play.png"/></a></div>
+</div></article>
+<hr>
+<article><div class="content">
+    <h2>Переводы Aqchapay </h2>
+
+    <h2>Лимиты</h2>
+    <div class="text"><span>Не более 3 переводов одному получателю в сутки<br/>Не более 3 получателей в сутки<br/>От 300₽ до 100 000₽ за транзакцию<br/>В месяц до 100 000₽</span></div>
+    <h2>Комиссии</h2>
+    <div class="text">1.2% при сумме перевода более 4333₽</div>
+
+    <div aria-label="Ссылки на магазины и сайт" class="icons-row" role="list"><a aria-label="Официальный сайт" class="icon-link" href="https://aqchapay.ru/" rel="noopener" role="listitem" target="_blank"><img alt="" src="store icons/website.svg"/></a><a aria-label="App Store" class="icon-link" href="https://apps.apple.com/ru/app/aqcha-pay/id6748309286" rel="noopener" role="listitem" target="_blank"><img alt="" src="store icons/App_Store.svg"/></a><a aria-label="Google Play" class="icon-link" href="https://play.google.com/store/apps/details?id=ru.aqchapay.aqchapay" rel="noopener" role="listitem" target="_blank"><img alt="" src="store icons/Google_Play.png"/></a></div>
+</div></article>
+<hr>
+<article><div class="content">
+    <h2>Переводы Anjirpay </h2>
+
+    <h2>Лимиты</h2>
+    <div class="text"><span>Не более 3 переводов одному получателю в сутки<br/>Не более 3 получателей в сутки<br/>От 300₽ до 100 000₽ за транзакцию<br/>В месяц до 100 000₽</span></div>
+    <h2>Комиссии</h2>
+    <div class="text">1.2% при сумме перевода более 4333₽</div>
+
+    <div aria-label="Ссылки на магазины и сайт" class="icons-row" role="list"><a aria-label="Официальный сайт" class="icon-link" href="https://aqchapay.ru/" rel="noopener" role="listitem" target="_blank"><img alt="" src="store icons/website.svg"/></a><a aria-label="Google Play" class="icon-link" href="https://play.google.com/store/apps/details?id=org.anjirpay.mobile.anjirpay" rel="noopener" role="listitem" target="_blank"><img alt="" src="store icons/Google_Play.png"/></a></div>
     <div class="links-row">
         <a href="https://t.me/CursoUz" rel="noopener" target="_blank">Телеграм-канал Curso</a>
         <a href="https://t.me/CursoExchangeRatesBot" rel="noopener" target="_blank">Телеграм-бот</a>
